--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,83 @@
+.background {
+  background-color: #0093E9;
+  background-image: linear-gradient(45deg, #0093E9 13%, #80D0C7 56%, #a1ffc5 100%);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: white;
+  border-radius: 32px;
+  padding: 40px 30px;
+}
+.container h1 {
+  margin: 0px;
+  font-size: 48px;
+  font-weight: bold;
+}
+.container h2 {
+  font-size: 32px;
+}
+.container p {
+  margin-top: 10px;
+  font-size: 20px;
+}
+.link {
+  font-weight: bold;
+  background-color: blue;
+  color: white;
 }
 
-.footer {
+.form {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
-
-.footer a {
+.form div {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.form input, .form select {
+  padding: 20px;
+  height: 100%;
 }
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.form input {
+  border-radius: 20px;
+  border: none;
+  outline: none;
 }
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.form input[type="text"] {
+  border: 2px solid gray;
+  border-right: 2px transparent;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   text-align: center;
+  font-size: 20px;
+  color: gray;
 }
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.form select {
+  border-radius: 20px;
+  border: 2px solid gray;
+  border-left: 2px transparent;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  text-align: center;
+  font-size: 20px;
+  color: gray;
 }
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.form input[type="submit"] {
+  margin-top: 30px;
+  width: 100%;
+  background-color: blue;
+  color: white;
+  font-size: 20px;
 }
